# mlops-data-engineering

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: cl.yaml
