[tool.poetry]
name = "mlopsproject"
version = "0.1.0"
description = "This is a complete Data Science/MLOps project."
authors = ["Mariana Rosa Dias Santos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
pyspark = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.25.2"
ipython = "<8.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"